salesforce/force-app/main/default/objects/Account/fields/DentShift_Clinic_Id__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Clinic_Id__c</fullName>
    <label>DENT SHIFTの医院ID</label>
    <description>DENT SHIFTの医院ID(外部ID・一意)</description>
    <inlineHelpText>DENT SHIFTの医院ID(外部ID・一意)</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>