salesforce/force-app/main/default/objects/Account/fields/DentShift_Consultation_Cta_Clicked_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Consultation_Cta_Clicked_At__c</fullName>
    <label>相談CTAの最終クリック日時</label>
    <description>相談CTAの最終クリック日時</description>
    <inlineHelpText>相談CTAの最終クリック日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>