salesforce/force-app/main/default/objects/Account/fields/DentShift_Consultation_Cta_Clicks__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Consultation_Cta_Clicks__c</fullName>
    <label>相談CTAのクリック回数</label>
    <description>相談CTAのクリック回数</description>
    <inlineHelpText>相談CTAのクリック回数</inlineHelpText>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>