salesforce/force-app/main/default/objects/Account/fields/DentShift_Consultation_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Consultation_Status__c</fullName>
    <label>直近の相談予約の状態</label>
    <description>直近の相談予約の状態(予約成立/キャンセル)</description>
    <inlineHelpText>直近の相談予約の状態(予約成立/キャンセル)</inlineHelpText>
    <type>Text</type>
    <length>40</length>
</CustomField>