salesforce/force-app/main/default/objects/Account/fields/DentShift_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Contract_Status__c</fullName>
    <label>契約状態</label>
    <description>契約状態(最新の契約)</description>
    <inlineHelpText>契約状態(最新の契約)</inlineHelpText>
    <type>Text</type>
    <length>40</length>
</CustomField>