salesforce/force-app/main/default/objects/Account/fields/DentShift_Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Current_Plan__c</fullName>
    <label>契約プラン</label>
    <description>契約プラン(最新の契約)</description>
    <inlineHelpText>契約プラン(最新の契約)</inlineHelpText>
    <type>Text</type>
    <length>40</length>
</CustomField>