salesforce/force-app/main/default/objects/Account/fields/DentShift_Latest_Provisional__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Latest_Provisional__c</fullName>
    <label>最新診断が暫定値</label>
    <description>最新診断が暫定値(サンプル/計測不能を含む)か</description>
    <inlineHelpText>最新診断が暫定値(サンプル/計測不能を含む)か</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>