salesforce/force-app/main/default/objects/Account/fields/DentShift_Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Latest_Status__c</fullName>
    <label>最新診断の総合判定</label>
    <description>最新診断の総合判定</description>
    <inlineHelpText>最新診断の総合判定</inlineHelpText>
    <type>Text</type>
    <length>40</length>
</CustomField>