salesforce/force-app/main/default/objects/Account/fields/DentShift_Ops_Url__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Ops_Url__c</fullName>
    <label>DENT SHIFT管理画面</label>
    <description>DENT SHIFT管理画面(連携イベント)への参照</description>
    <inlineHelpText>DENT SHIFT管理画面(連携イベント)への参照</inlineHelpText>
    <type>Url</type>
</CustomField>