salesforce/force-app/main/default/objects/Account/fields/DentShift_Site_Domain__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Site_Domain__c</fullName>
    <label>医院サイトのドメイン</label>
    <description>医院サイトのドメイン</description>
    <inlineHelpText>医院サイトのドメイン</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>